vibe coded the docs with the readme info. lets see

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,54 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "IQLabs SDK"
+description: "2000x cheaper inscription-based blockchain ledger for the complete Web3 experience"
 ---
 
-## Setting up
+## Our Vision
 
-Get your documentation site up and running in minutes.
+We are building the complete Web3 that everyone has been waiting for, powered by inscriptions that are **2000x cheaper** than traditional methods.
+
+Now anyone can join a **blockchain ledger-based internet with real-time communication** using just localhost and this SDK.
+
+<CardGroup cols={2}>
+  <Card title="Follow us on X" icon="x-twitter" href="https://x.com/IQLabsOfficial">
+    Stay updated with the latest news and announcements from IQLabs.
+  </Card>
+  <Card title="See it in action" icon="play" href="https://x.com/IQLabsOfficial/status/2014131287871627554">
+    Watch our demo showcasing real-time blockchain communication.
+  </Card>
+</CardGroup>
+
+---
+
+## Get Started
 
 <Card
-  title="Start here"
+  title="Quickstart Guide"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Learn the core concepts and start building with IQLabs SDK.
 </Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Advanced Functions"
+  icon="code"
+  href="/advanced"
+  horizontal
 >
-  Browse our showcase of exceptional documentation sites.
+  Explore advanced internal functions for power users.
 </Card>
+
+---
+
+## Connect with Us
+
+<CardGroup cols={2}>
+  <Card title="GitHub" icon="github" href="https://github.com/IQCoreTeam/IQSdkUsageExampleCliTool">
+    Check out our example project and contribute.
+  </Card>
+  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/IQLabsOfficial">
+    Follow us for updates and community discussions.
+  </Card>
+</CardGroup>
