--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,364 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Core concepts and functions for the IQLabs SDK"
 ---
 
-## Get started in three steps
+<Note>
+This document is in progress and will be refined.
+</Note>
 
-Get your documentation site running locally and make your first customization.
+## Core Concepts
 
-### Step 1: Set up your local environment
+These are the key concepts to know before using the IQLabs SDK.
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+---
 
-### Step 2: Deploy your changes
+### Data Storage (Code In)
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+This is how you store any data (files, text, JSON) on-chain.
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+#### How is it stored?
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+Depending on data size, the SDK picks the optimal method:
 
-### Step 3: Go live
+- **Small data (&lt; 900 bytes)**: store immediately, fastest
+- **Medium data (&lt; 8.5 KB)**: split into multiple transactions
+- **Large data (&gt;= 8.5 KB)**: upload in parallel for speed
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+#### Key related functions
 
-## Next steps
+- [`codeIn()`](#codein): upload data and get a transaction ID
+- [`readCodeIn()`](#readcodein): read data back from a transaction ID
 
-Now that you have your docs running, explore these key features:
+---
 
-<CardGroup cols={2}>
+### User State PDA
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+An on-chain profile account for a user.
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+#### What gets stored?
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
+- Profile info (name, profile picture, bio, etc.)
+- Number of uploaded files
+- Friend request records
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+Friend requests are not stored as values in the PDA; they are sent as transactions.
 </Note>
+
+#### When is it created?
+
+It is created automatically the first time you call [`codeIn()`](#codein). No extra setup is required, but the first user may need to sign twice.
+
+---
+
+### Connection PDA
+
+An on-chain account that manages relationships between two users (friends, messages, etc.).
+
+#### What states can it have?
+
+- **pending**: a friend request was sent but not accepted yet
+- **approved**: the request was accepted and the users are connected
+- **blocked**: one side blocked the other
+
+<Warning>
+A blocked connection can only be unblocked by the blocker.
+</Warning>
+
+#### Key related functions
+
+- [`requestConnection()`](#requestconnection): send a friend request (creates pending)
+- [`manageConnection()`](#manageconnection): approve/reject/block/unblock a request
+- [`readConnection()`](#readconnection): check current relationship status
+- [`writeConnectionRow()`](#writeconnectionrow): exchange messages/data with a connected friend
+- [`fetchUserConnections()`](#fetchuserconnections): fetch all connections (sent & received friend requests)
+
+---
+
+### Database Tables
+
+Store JSON data in tables like a database.
+
+#### How are tables created?
+
+There is no dedicated "create table" function. The first write via [`writeRow()`](#writerow) creates the table automatically.
+
+<Note>
+A table is uniquely identified by the combination of `dbRootId` and `tableSeed` (table name).
+</Note>
+
+#### Key related functions
+
+- [`writeRow()`](#writerow): add a new row (creates the table if missing)
+- [`readTableRows()`](#readtablerows): read rows from a table
+- [`getTablelistFromRoot()`](#gettablelistfromroot): list all tables in a database
+- [`fetchInventoryTransactions()`](#fetchinventorytransactions): list uploaded files
+
+---
+
+## Function Details
+
+### Data Storage and Retrieval
+
+#### `codeIn()`
+
+| **Parameters** | `connection`: Solana RPC connection<br/>`signer`: signing wallet<br/>`data`: data to upload (single string or array)<br/>`mode`: contract mode (default: 'anchor') |
+|----------------|--------------------------|
+| **Returns** | Transaction signature (string) |
+
+```typescript
+import { codeIn } from 'iqlabs-sdk';
+
+// Upload a single file
+const signature = await codeIn(connection, signer, 'Hello, blockchain!');
+
+// Upload multiple files
+const multiSig = await codeIn(connection, signer, ['file1.txt', 'file2.txt', 'file3.txt']);
+```
+
+---
+
+#### `readCodeIn()`
+
+| **Parameters** | `txSignature`: transaction signature<br/>`connection`: (optional) Solana RPC connection |
+|----------------|--------------------------|
+| **Returns** | Stored data (string) |
+
+```typescript
+import { readCodeIn } from 'iqlabs-sdk';
+
+const data = await readCodeIn('5Xg7...', connection);
+console.log(data); // 'Hello, blockchain!'
+```
+
+---
+
+### Connection Management
+
+#### `requestConnection()`
+
+| **Parameters** | `connection`: Solana RPC connection<br/>`signer`: signing wallet<br/>`dbRootId`: database ID<br/>`partyA`, `partyB`: the two users to connect<br/>`tableName`: connection table name<br/>`columns`: column list<br/>`idCol`: ID column<br/>`extKeys`: extension keys |
+|----------------|--------------------------|
+| **Returns** | Transaction signature (string) |
+
+```typescript
+import { requestConnection } from 'iqlabs-sdk';
+
+await requestConnection(
+  connection, signer, 'my-db',
+  myWalletAddress, friendWalletAddress,
+  'dm_table', ['message', 'timestamp'], 'message_id', []
+);
+```
+
+---
+
+#### `manageConnection()`
+
+| **Parameters** | `builder`: InstructionBuilder<br/>`accounts`: `{ db_root, connection_table, signer }`<br/>`args`: `{ db_root_id, connection_seed, new_status }` |
+|----------------|--------------------------|
+| **Returns** | TransactionInstruction |
+
+```typescript
+import { contract } from 'iqlabs-sdk';
+
+// Approve a friend request
+const approveIx = contract.manageConnectionInstruction(
+  builder,
+  { db_root, connection_table, signer: myPubkey },
+  { db_root_id, connection_seed, new_status: contract.CONNECTION_STATUS_APPROVED }
+);
+
+// Block a user
+const blockIx = contract.manageConnectionInstruction(
+  builder,
+  { db_root, connection_table, signer: myPubkey },
+  { db_root_id, connection_seed, new_status: contract.CONNECTION_STATUS_BLOCKED }
+);
+```
+
+---
+
+#### `readConnection()`
+
+| **Parameters** | `dbRootId`: database ID<br/>`walletA`, `walletB`: the two wallets to check |
+|----------------|--------------------------|
+| **Returns** | `{ status: 'pending' \| 'approved' \| 'blocked', requester, blocker }` |
+
+```typescript
+import { readConnection } from 'iqlabs-sdk';
+
+const { status, requester, blocker } = await readConnection('my-db', walletA, walletB);
+console.log(status); // 'pending' | 'approved' | 'blocked'
+```
+
+---
+
+#### `writeConnectionRow()`
+
+| **Parameters** | `connection`: Solana RPC connection<br/>`signer`: signing wallet<br/>`dbRootId`: database ID<br/>`connectionSeed`: connection seed<br/>`rowJson`: JSON data |
+|----------------|--------------------------|
+| **Returns** | Transaction signature (string) |
+
+```typescript
+import { writeConnectionRow } from 'iqlabs-sdk';
+
+await writeConnectionRow(
+  connection, signer, 'my-db', connectionSeed,
+  JSON.stringify({ message_id: '123', message: 'Hello friend!', timestamp: Date.now() })
+);
+```
+
+---
+
+#### `fetchUserConnections()`
+
+Fetch all connections (friend requests) for a user by analyzing their UserState PDA transaction history. Each connection includes its `dbRootId`, identifying which app the connection belongs to.
+
+| **Parameters** | `userPubkey`: user public key (string or PublicKey)<br/>`options`: optional settings |
+|----------------|--------------------------|
+| **Options** | `limit`: max number of transactions to fetch<br/>`before`: signature to paginate from<br/>`speed`: rate limit profile ('light', 'medium', 'heavy', 'extreme')<br/>`mode`: contract mode (optional) |
+| **Returns** | Array of connection objects with dbRootId, partyA, partyB, status, requester, blocker, timestamp |
+
+```typescript
+import { fetchUserConnections } from 'iqlabs-sdk/reader';
+
+// Fetch all connections (across all apps!)
+const connections = await fetchUserConnections(myPubkey, {
+  speed: 'light',  // 6 RPS (default)
+  limit: 100
+});
+
+// Filter by app
+const solchatConnections = connections.filter(c => c.dbRootId === 'solchat');
+const zoConnections = connections.filter(c => c.dbRootId === 'zo-trading');
+
+// Filter by status
+const pendingRequests = connections.filter(c => c.status === 'pending');
+const friends = connections.filter(c => c.status === 'approved');
+const blocked = connections.filter(c => c.status === 'blocked');
+
+// Check connection details
+connections.forEach(conn => {
+  console.log(`App: ${conn.dbRootId}, ${conn.partyA} <-> ${conn.partyB}, status: ${conn.status}`);
+});
+```
+
+---
+
+### Table Management
+
+#### `writeRow()`
+
+| **Parameters** | `connection`: Solana RPC connection<br/>`signer`: signing wallet<br/>`dbRootId`: database ID<br/>`tableSeed`: table name<br/>`rowJson`: JSON row data |
+|----------------|--------------------------|
+| **Returns** | Transaction signature (string) |
+
+```typescript
+import { writeRow } from 'iqlabs-sdk';
+
+// Write the first row to create the table
+await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
+  id: 1, name: 'Alice', email: 'alice@example.com'
+}));
+
+// Add another row to the same table
+await writeRow(connection, signer, 'my-db', 'users', JSON.stringify({
+  id: 2, name: 'Bob', email: 'bob@example.com'
+}));
+```
+
+---
+
+#### `readTableRows()`
+
+| **Parameters** | `accountInfo`: table account info |
+|----------------|--------------------------|
+| **Returns** | Row array (Row[]) |
+
+```typescript
+import { readTableRows, contract } from 'iqlabs-sdk';
+
+const dbRootPda = contract.pda.getDbRootPda('my-db');
+const tablePda = contract.pda.getTablePda(dbRootPda, 'users');
+const accountInfo = await connection.getAccountInfo(tablePda);
+const rows = readTableRows(accountInfo);
+
+console.log(`Total rows: ${rows.length}`);
+```
+
+---
+
+#### `getTablelistFromRoot()`
+
+| **Parameters** | `dbRootId`: database ID |
+|----------------|--------------------------|
+| **Returns** | Table name array (string[]) |
+
+```typescript
+import { getTablelistFromRoot } from 'iqlabs-sdk';
+
+const tables = await getTablelistFromRoot('my-db');
+console.log('Table list:', tables);
+```
+
+---
+
+#### `fetchInventoryTransactions()`
+
+| **Parameters** | `userPubkey`: user public key<br/>`limit`: max count (optional) |
+|----------------|--------------------------|
+| **Returns** | Transaction array |
+
+```typescript
+import { fetchInventoryTransactions } from 'iqlabs-sdk';
+
+const myFiles = await fetchInventoryTransactions(myPubkey, 20);
+myFiles.forEach(tx => {
+  let metadata: { data?: unknown } | null = null;
+  try {
+    metadata = JSON.parse(tx.metadata);
+  } catch {
+    metadata = null;
+  }
+
+  if (metadata && metadata.data !== undefined) {
+    const inlineData = typeof metadata.data === 'string'
+      ? metadata.data
+      : JSON.stringify(metadata.data);
+    console.log(`Inline data: ${inlineData}`);
+  } else {
+    console.log(`Signature: ${tx.signature}`);
+  }
+});
+```
+
+---
+
+### Environment Settings
+
+#### `setRpcUrl()`
+
+| **Parameters** | `url`: Solana RPC URL |
+|----------------|--------------------------|
+| **Returns** | None (void) |
+
+```typescript
+import { setRpcUrl } from 'iqlabs-sdk';
+
+setRpcUrl('https://your-rpc.example.com');
+```
+
+---
+
+## Additional Resources
+
+<CardGroup cols={2}>
+  <Card title="GitHub Example" icon="github" href="https://github.com/IQCoreTeam/IQSdkUsageExampleCliTool">
+    Check out a complete example project using IQLabs SDK.
+  </Card>
+  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/IQLabsOfficial">
+    Follow us for updates and announcements.
+  </Card>
+</CardGroup>
