--- a/index.mdx
+++ b/index.mdx
@@ -1,54 +1,27 @@
 ---
-title: "IQLabs SDK"
+title: "Main"
 description: "2000x cheaper inscription-based blockchain ledger for the complete Web3 experience"
 ---
 
 ## Our Vision
 
-We are building the complete Web3 that everyone has been waiting for, powered by inscriptions that are **2000x cheaper** than traditional methods.
+**IQLabs** is building the **complete Web3** that everyone has been waiting for, powered by inscriptions that are **2000x cheaper** than traditional methods.
 
-Now anyone can join a **blockchain ledger-based internet with real-time communication** using just localhost and this SDK.
-
-<CardGroup cols={2}>
-  <Card title="Follow us on X" icon="x-twitter" href="https://x.com/IQLabsOfficial">
-    Stay updated with the latest news and announcements from IQLabs.
-  </Card>
-  <Card title="See it in action" icon="play" href="https://x.com/IQLabsOfficial/status/2014131287871627554">
-    Watch our demo showcasing real-time blockchain communication.
-  </Card>
-</CardGroup>
+Join the **complete blockchain ledger internet** with real-time communication using just localhost and this SDK.
 
 ---
 
 ## Get Started
 
 <Card
-  title="Quickstart Guide"
+  title="Developer Docs"
   icon="rocket"
-  href="/quickstart"
+  href="/docs"
   horizontal
 >
   Learn the core concepts and start building with IQLabs SDK.
 </Card>
 
-<Card
-  title="Advanced Functions"
-  icon="code"
-  href="/advanced"
-  horizontal
->
-  Explore advanced internal functions for power users.
-</Card>
+[Read our article about the vision →](https://x.com/IQLabsOfficial/status/2014131287871627554)
 
----
-
-## Connect with Us
-
-<CardGroup cols={2}>
-  <Card title="GitHub" icon="github" href="https://github.com/IQCoreTeam/IQSdkUsageExampleCliTool">
-    Check out our example project and contribute.
-  </Card>
-  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/IQLabsOfficial">
-    Follow us for updates and community discussions.
-  </Card>
-</CardGroup>
+[Languages →](/languages)
