--- a/docs.mdx
+++ b/docs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Quickstart"
+title: "Developer Docs"
 description: "Core concepts and functions for the IQLabs SDK"
 ---
 
@@ -352,13 +352,153 @@ setRpcUrl('https://your-rpc.example.com');
 
 ---
 
-## Additional Resources
+## Advanced Functions
 
-<CardGroup cols={2}>
-  <Card title="GitHub Example" icon="github" href="https://github.com/IQCoreTeam/IQSdkUsageExampleCliTool">
-    Check out a complete example project using IQLabs SDK.
-  </Card>
-  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/IQLabsOfficial">
-    Follow us for updates and announcements.
-  </Card>
-</CardGroup>
+<Warning>
+These are low-level SDK functions. Not needed for typical usage, but useful when building custom features or debugging.
+</Warning>
+
+### Writer Functions
+
+#### `manageRowData()`
+
+Low-level function for managing row data in tables.
+
+| **Module** | `writer` |
+|------------|----------|
+| **Use Case** | Custom row management, batch operations |
+
+```typescript
+import { manageRowData } from 'iqlabs-sdk/writer';
+
+await manageRowData(connection, signer, {
+  dbRootId: 'my-db',
+  tableSeed: 'users',
+  operation: 'update',
+  rowData: JSON.stringify({ id: 1, name: 'Updated Name' })
+});
+```
+
+---
+
+### Reader Functions
+
+#### `readUserState()`
+
+Reads the UserState PDA for a given user.
+
+| **Module** | `reader` |
+|------------|----------|
+| **Use Case** | Fetching user profile data, checking upload counts |
+
+```typescript
+import { readUserState } from 'iqlabs-sdk/reader';
+
+const userState = await readUserState(userPubkey);
+console.log('Profile:', userState.profile);
+console.log('Upload count:', userState.fileCount);
+```
+
+---
+
+#### `readInventoryMetadata()`
+
+Reads metadata associated with a user's inventory (uploaded files).
+
+| **Module** | `reader` |
+|------------|----------|
+| **Use Case** | Listing user files with metadata, file management |
+
+```typescript
+import { readInventoryMetadata } from 'iqlabs-sdk/reader';
+
+const metadata = await readInventoryMetadata(userPubkey);
+metadata.forEach(item => {
+  console.log(`File: ${item.name}, Size: ${item.size}, Signature: ${item.signature}`);
+});
+```
+
+---
+
+#### `fetchAccountTransactions()`
+
+Fetches all transactions for a specific account.
+
+| **Module** | `reader` |
+|------------|----------|
+| **Use Case** | Transaction history, account analysis, debugging |
+
+```typescript
+import { fetchAccountTransactions } from 'iqlabs-sdk/reader';
+
+const transactions = await fetchAccountTransactions(accountPubkey, {
+  limit: 50,
+  before: lastSignature
+});
+
+transactions.forEach(tx => {
+  console.log(`Signature: ${tx.signature}, Block: ${tx.slot}`);
+});
+```
+
+---
+
+#### `getSessionPdaList()`
+
+Retrieves a list of session PDAs.
+
+| **Module** | `reader` |
+|------------|----------|
+| **Use Case** | Session management, active session tracking |
+
+```typescript
+import { getSessionPdaList } from 'iqlabs-sdk/reader';
+
+const sessions = await getSessionPdaList(userPubkey);
+sessions.forEach(session => {
+  console.log(`Session PDA: ${session.pda}, Active: ${session.isActive}`);
+});
+```
+
+---
+
+### Utility Functions
+
+#### `deriveDmSeed()`
+
+Derives a deterministic seed for direct messaging (DM) between two users.
+
+| **Module** | `utils` / `reader` |
+|------------|----------|
+| **Use Case** | Creating consistent connection identifiers, DM channel setup |
+
+```typescript
+import { deriveDmSeed } from 'iqlabs-sdk/utils';
+
+const seed1 = deriveDmSeed(walletA, walletB);
+const seed2 = deriveDmSeed(walletB, walletA);
+console.log(seed1 === seed2); // true
+```
+
+---
+
+#### `toSeedBytes()`
+
+Converts a string seed to the byte format required for PDA derivation.
+
+| **Module** | `utils` |
+|------------|----------|
+| **Use Case** | Custom PDA derivation, low-level seed manipulation |
+
+```typescript
+import { toSeedBytes } from 'iqlabs-sdk/utils';
+
+const seedString = 'my-custom-seed';
+const seedBytes = toSeedBytes(seedString);
+
+const [pda, bump] = PublicKey.findProgramAddressSync(
+  [seedBytes, otherSeed],
+  programId
+);
+```
+
