--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Main"
+title: "Getting Started"
 description: "2000x cheaper inscription-based blockchain ledger for the complete Web3 experience"
 ---
 
