--- a/index.mdx
+++ b/index.mdx
@@ -9,16 +9,11 @@ description: "2000x cheaper inscription-based blockchain ledger for the complete
 
 Join the **complete blockchain ledger internet** with real-time communication using just localhost and this SDK.
 
----
+![Iqiqiqi](/images/iqiqiqi.png)
 
 ## Get Started
 
-<Card
-  title="Developer Docs"
-  icon="rocket"
-  href="/docs"
-  horizontal
->
+<Card title="Developer Docs" icon="rocket" horizontal href="/docs">
   Learn the core concepts and start building with IQLabs SDK.
 </Card>
 
