--- a/languages.mdx
+++ b/languages.mdx
@@ -6,4 +6,12 @@ description: "Select your preferred language"
 <CardGroup cols={2}>
   <Card title="English" icon="globe" href="/index" />
   <Card title="한국어" icon="globe" href="/ko/index" />
+  <Card title="Español" icon="globe" href="/es/index" />
+  <Card title="Français" icon="globe" href="/fr/index" />
+  <Card title="Português (Brasil)" icon="globe" href="/pt-br/index" />
+  <Card title="Deutsch" icon="globe" href="/de/index" />
+  <Card title="日本語" icon="globe" href="/ja/index" />
+  <Card title="简体中文" icon="globe" href="/zh-cn/index" />
+  <Card title="हिन्दी" icon="globe" href="/hi/index" />
+  <Card title="తెలుగు" icon="globe" href="/te/index" />
 </CardGroup>
