--- a/ko/docs.mdx
+++ b/ko/docs.mdx
@@ -11,7 +11,7 @@ description: "IQLabs SDK의 핵심 개념과 함수"
 
 IQLabs SDK를 사용하기 전에 알아야 할 주요 개념들입니다.
 
----
+![Iqiqiq](/images/iqiqiq.png)
 
 ### 데이터 저장 (Code In)
 
